src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html, body {
  height: auto;
  min-height: 100%;
  overflow-y: auto;
}


.rendered-content h3 {
  @apply text-3xl font-bold text-white mb-4 text-center;
}


.rendered-content h4 {
  @apply text-xl font-bold text-white mb-4;
}


.rendered-content p {
  @apply text-base text-gray-300 mb-2;
}
.rendered-content a {
  @apply text-base text-blue-400 underline  mb-2;
}

.rendered-content ul {
  @apply text-base text-gray-300 mb-2;
}

